exports[`use all parts of svg-edit > check tool_source_set #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer"><title>Layer 1</title></g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer">
    <title>Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokewidth="5"
      starradiusmultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
    >
      <animate
        attributeName="opacity"
        begin="indefinite"
        dur="0.2"
        fill="freeze"
        to="1"
      ></animate>
    </polygon>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_clone #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
    <polygon
      cx="300"
      cy="150"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2"
    ></polygon>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_change_rotation #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
    <polygon
      cx="300"
      cy="150"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2_id"
      class="svg_2_class"
      transform="rotate(25 320 163.634)"
    ></polygon>
  </g>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_change_blur #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
    <polygon
      cx="300"
      cy="150"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2_id"
      class="svg_2_class"
      transform="rotate(25 320 163.634)"
      filter="url(#svg_2_id_blur)"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_change_opacity #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
    <polygon
      cx="300"
      cy="150"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2_id"
      class="svg_2_class"
      filter="url(#svg_2_id_blur)"
      opacity="0.5"
      transform="rotate(25 320 163.634)"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_bring_to_back #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2_id"
      class="svg_2_class"
      filter="url(#svg_2_id_blur)"
      opacity="0.5"
      transform="rotate(25 320 163.634)"
    ></polygon>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_bring_to_front #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
    <polygon
      cx="300"
      cy="150"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="320,103.33333587646484 333.0618896484375,152.0218505859375 383.4037780761719,149.39886474609375 341.13458251953125,176.86705017089844 359.1856689453125,223.93446350097656 320,192.22222900390625 280.8143310546875,223.93446350097656 298.86541748046875,176.86705017089844 256.5962371826172,149.39886474609375 306.9381103515625,152.0218505859375 320,103.33333587646484 333.0618896484375,152.0218505859375 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
      id="svg_2_id"
      class="svg_2_class"
      filter="url(#svg_2_id_blur)"
      opacity="0.5"
      transform="rotate(25 320 163.634)"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_delete #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_align_to_page #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="5"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_change_stroke_width #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="15"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_change_stroke_style #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="15"
      fill-opacity="1"
      stroke-opacity="1"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_change_line_cap #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#FF0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#000000"
      stroke-width="15"
      fill-opacity="1"
      stroke-opacity="1"
      stroke-dasharray="5,2,2,2"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_change_stoke_fill_color #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="5"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#bf0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="300,83.33333333333333 313.0618944953883,132.02184456944562 363.40376775301024,129.39886704167017 321.13458925100343,156.86704431944327 339.18568348616486,203.93446629166317 300,172.22222222222223 260.81431651383514,203.93446629166317 278.86541074899657,156.86704431944327 236.59623224698976,129.39886704167017 286.9381055046117,132.02184456944562 300,83.33333333333333 313.0618944953883,132.02184456944562 "
      stroke="#0000bf"
      stroke-width="15"
      fill-opacity="1"
      stroke-opacity="1"
      stroke-dasharray="5,2,2,2"
      stroke-linecap="square"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;

exports[`use all parts of svg-edit > check tool_star_change_sides #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <polygon
      cx="300"
      cy="150"
      id="svg_1"
      shape="star"
      point="6"
      r="66.66666666666667"
      radialshift="0"
      r2="22.222222222222225"
      orient="point"
      fill="#bf0000"
      strokecolor="#000000"
      strokeWidth="5"
      starRadiusMultiplier="3"
      points="301.08849207560223,76.2796007792155 312.1996031867133,123.70125847289464 358.8235189945648,109.61293411254883 323.31071429782446,142.94626744588217 358.82351899456484,176.27960077921549 312.1996031867134,162.1912764188697 301.08849207560223,209.61293411254883 289.97738096449115,162.1912764188697 243.35346515663966,176.2796007792155 278.86626985338,142.94626744588217 243.35346515663966,109.61293411254883 289.97738096449115,123.70125847289464 301.08849207560223,76.2796007792155 312.1996031867134,123.70125847289464 "
      stroke="#0000bf"
      stroke-width="15"
      fill-opacity="1"
      stroke-opacity="1"
      stroke-dasharray="5,2,2,2"
      stroke-linecap="square"
    ></polygon>
  </g>
  <defs>
    <filter id="svg_2_id_blur" x="-50%" y="-50%" width="200%" height="200%">
      <feGaussianBlur in="SourceGraphic" stdDeviation="5"></feGaussianBlur>
    </filter>
  </defs>
</svg>
`;
